[package]
name = "vapory-types"
version = "0.11.1"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tetcoin/tetsy-common"
description = "Vapory types"
edition = "2018"

[dependencies]
vapbloom = { path = "../vapbloom", version = "0.11.1", default-features = false }
tetsy-fixed-hash = { path = "../tetsy-fixed-hash", version = "0.7.1", default-features = false, features = ["byteorder", "rustc-hex"] }
uint-crate = { path = "../uint-crate", package = "uint-crate", version = "0.9.1", default-features = false }
tetsy-primitive-types = { path = "../tetsy-primitive-types", version = "0.9.1", features = ["byteorder", "rustc-hex"], default-features = false }
tetsy-impl-serde = { path = "../tetsy-primitive-types/impls/serde", version = "0.3.2", default-features = false, optional = true }
tetsy-impl-rlp = { path = "../tetsy-primitive-types/impls/rlp", version = "0.3.1", default-features = false, optional = true }
tetsy-impl-codec = { version = "0.5.1", path = "../tetsy-primitive-types/impls/codec", default-features = false, optional = true }

[dev-dependencies]
serde_json = "1.0.41"

[features]
default = ["std", "tetsy-rlp", "serialize"]
std = ["uint-crate/std", "tetsy-fixed-hash/std", "vapbloom/std", "tetsy-primitive-types/std"]
serialize = ["tetsy-impl-serde", "tetsy-primitive-types/serde_no_std", "vapbloom/serialize"]
arbitrary = ["vapbloom/arbitrary", "tetsy-fixed-hash/arbitrary", "uint-crate/arbitrary"]
tetsy-rlp = ["tetsy-impl-rlp", "vapbloom/tetsy-rlp", "tetsy-primitive-types/tetsy-rlp"]
codec = ["tetsy-impl-codec", "vapbloom/codec"]
num-traits = ["tetsy-primitive-types/num-traits"]
