[package]
name = "impl-rlp"
version = "0.2.1"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/paritytech/parity-common"
description = "RLP serialization support for uint and fixed hash."
edition = "2018"

[dependencies]
tetsy-rlp = { version = "0.4", path = "../../../tetsy-rlp", default-features = false }

[features]
default = ["std"]
std = ["tetsy-rlp/std"]
