[package]
name = "tetsy-impl-codec"
version = "0.5.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tetcoin/tetsy-common"
description = "Parity Codec serialization support for uint and fixed hash."
edition = "2018"

[dependencies]
tetsy-scale-codec = { version = "2.0.0", default-features = false }

[features]
default = ["std"]
std = ["tetsy-scale-codec/std"]
