[package]
name = "tetsy-impl-codec"
version = "0.4.1"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0/MIT"
homepage = "https://github.com/tetcoin/tetsy-common"
description = "Tetsy Codec serialization support for uint and fixed hash."

[dependencies]
tetsy-scale-codec = { version = "1.0.3", default-features = false }

[features]
default = ["std"]
std = ["tetsy-scale-codec/std"]
