[package]
name = "tetsy-impl-codec"
version = "0.4.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "Parity Codec serialization support for uint and fixed hash."
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = [ "tetcoin", "tetcore", "vapory" ]
categories = [ "cryptography::cryptocurrencies" ]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-common"
documentation = "https://docs.rs/tetsy-impl-codec"

[dependencies]
tetsy-scale-codec = { version = "1.0.6", default-features = false }

[features]
default = ["std"]
std = ["tetsy-scale-codec/std"]
