[package]
name = "tetsy-impl-num-traits"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "tetsy num-traits implementation for uint."
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = [ "tetcoin", "tetcore", "vapory" ]
categories = [ "cryptography::cryptocurrencies" ]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-common"
documentation = "https://docs.rs/tetsy-impl-num-traits"

[dependencies]
num-traits = { version = "0.2", default-features = false }
uint-crate = { version = "0.9.0-alpha", path = "../../../uint-crate", default-features = false }
