[package]
name = "tetsy-impl-num-traits"
version = "0.1.1"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tetcoin/tetsy-common"
description = "Tetsy Common num-traits implementation for uint."
edition = "2018"

[dependencies]
num-traits = { version = "0.2", default-features = false }
uint-crate = { version = "0.9.1", path = "../../../uint-crate", default-features = false }
