[package]
name = "tetsy-impl-serde"
version = "0.2.2"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0/MIT"
homepage = "https://github.com/tetcoin/tetsy-common"
description = "Serde serialization support for uint and fixed hash."

[dependencies]
serde = "1.0"

[dev-dependencies]
criterion = "0.3.0"
serde_derive = "1.0"
serde_json = "1.0"
uint-crate = { version = "0.8.1", path = "../../../uint-crate" }

[[bench]]
name = "impl_serde"
harness = false
