[package]
name = "tetsy-impl-serde"
version = "0.3.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "serde serialization support for uint-crate and tetsy fixed hash."
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = [ "tetcoin", "tetcore", "vapory" ]
categories = [ "cryptography::cryptocurrencies" ]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-common"
documentation = "https://docs.rs/tetsy-impl-serde"

[features]
default = ["std"]
std = ["serde/std"]

[dependencies]
serde = { version = "1.0.101", default-features = false, features = ["alloc"] }

[dev-dependencies]
criterion = "0.3.0"
serde_derive = "1.0.101"
serde_json = "1.0.41"
uint-crate = { version = "0.9.0-alpha", path = "../../../uint-crate" }

[[bench]]
name = "impl_serde"
harness = false
